slightly more abstract tech chase notes

--- a/tournament-notes.org
+++ b/tournament-notes.org
@@ -449,3 +449,31 @@ Grind waft confirms. Grind them. Practice them until it is physically impossible
 for you to miss them. Know how they start. Know exactly what buttons to
 press. Know kill percents. That's the most important thing you can do as a
 player right now.
+
+Ah, one more thing. This game is so hard. It's so hard to be completely
+purposeful in every action you take. I guess that's life, too. There are so many
+things to keep track of in the game. So many things to punish, so many ways to
+punish them. When you get mind gamed or baited, just remember how they did it to
+you. Then, start doing it to other people. I think that's something that you
+don't do enough. The best way to learn what to do in situations is to copy other
+people until you understand what's going on. Do you get called out for jumping?
+Okay, figure out how and then start doing that to other people. Jot down notes
+between friendlies to help you remember. This game isn't magical. Fifteen year
+old Mango figured it out and was whooping ass at MLG world championships. Don't
+make it so deep and mysterious, because it's not. There's a lot of shit going on
+but the first thing you need to do is figure out all the basic, fundamental
+shit. It's right there in front of you -- just remember that you wouldn't learn
+a language only putting in new words from a book. You'd hear people say stuff
+and then say it yourself, get a feel for when it's right to say and when it
+isn't. Also, I need to focus on offensive shit. Well, not necessarily offensive,
+but proactive. Making people do things. 
+
+How do I get solid punishes off of calling out jumps?
+How can I pressure people to roll at ledge? Jump?
+How can I make people press buttons out of shield?
+How can I make people air dodge and punish them after?
+How can I make people whiff aerials?
+How do I push people into the corner?
+How do I make people in the corner want to shield? To roll? To attack me?
+How do I make people get hit by utilt / falling uair?
+How can I get close enough to people to pressure them with moves?
